# ownweb

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml
browser-extension/: Makefile  README.md
browser-extension/chrome/: manifest.json
browser-extension/firefox/: manifest.json
browser-extension/shared/: content.css  contentScript.js
daemon/: AGENTS.md  Cargo.toml  README.md  RULES.md
daemon/src/: api.rs  cli.rs  core.rs  main.rs  storage.rs
daemon/src/ai/: codex_app.rs  mod.rs  summary_cache.rs
daemon/src/sites/: mod.rs  x_com.rs
daemon/src/storage/: x_com.rs
docs/: browser-extension.md  chrome-extension.md  cli.md  index.md  installation.md  local-daemon.md  rules.md
google-chrome-extension/: AGENTS.md  README.md  background.js  content.css  contentScript.js  manifest.json  options.css  options.html  options.js  siteAdapters.js
weblayer/: Cargo.toml  LICENSE  README.md  RULES.md
weblayer/src/: api.rs  cli.rs  core.rs  lib.rs  storage.rs
weblayer/src/ai/: codex_app.rs  mod.rs
weblayer/src/api/: content.rs  dom.rs  error.rs  events.rs  feedback.rs  input.rs  rule_curation.rs  rules.rs  site.rs
weblayer/src/cli/: annotations.rs  client.rs  content.rs  feedback.rs  output.rs  rules.rs
weblayer/src/sites/: mod.rs  x_com.rs
weblayer/src/sites/x_com/: commands.rs  decide.rs  extract.rs  tests.rs
weblayer/src/storage/: x_com.rs
weblayer/src/storage/x_com/: annotations.rs  content.rs  decisions.rs  feedback.rs  rules.rs  schema.rs  tests.rs
weblayer/tests/: codex_rule_proposals.rs
