[package]
name = "weblayer"
version = "0.1.0"
edition = "2021"
authors = ["rndhouse <rndhouse@protonmail.com>"]
description = "Local web filtering daemon and CLI for user-controlled browsing rules."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rndhouse/weblayer"
homepage = "https://rndhouse.github.io/weblayer/"
documentation = "https://rndhouse.github.io/weblayer/"
keywords = ["browser", "cli", "daemon", "filtering", "rules"]
categories = ["command-line-utilities"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "RULES.md",
    "src/**",
]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
